--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "*",
     "numpy": "^0.0.1",
     "python-shell": "^3.0.1",
-    "socket.io": "*"
+    "socket.io": "*",
+    "johnny-five":"*"
   }
 }
